@@ -1,3 +1,7 @@
+2009-01-04  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/urlmap.rb: obsolete `path_filter' of mount.
+
 2008-12-10  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/builder.rb: obsolete auto_reload and Rack::Reloader is
